--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/webp" href="/favicon.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Smart Agriculture Web App Frontend</title>
+    <meta name="description" content="AgroSmart - Intelligent predictions for smarter farming. ML-powered crop prediction, fertilizer recommendations, and yield estimation." />
+    <meta name="theme-color" content="#10b981" />
+    <title>AgroSmart - Smart Agriculture Platform</title>
   </head>
   <body>
     <div id="root"></div>
